fixed margines on mobile

--- a/styles/resume.css
+++ b/styles/resume.css
@@ -1015,6 +1015,8 @@ margin-bottom: 5px;
     grid-column: 1/7;
     grid-row: 4/5;
     font-size: 10px;
+    margin-left: 10px;
+    margin-right: 10px;
   }
   .main2-left p{
     font-size: 1rem;
@@ -1026,10 +1028,11 @@ margin-bottom: 5px;
     grid-template-rows: 1fr 3fr;
     font-size: 1.5rem;
     font-weight: 200;
+    margin-left: 10px;
+    margin-right: 10px;
   }
   .main2-wrapper{
-    margin-left: 15px;
-    margin-right: 15px;
+
   }
 
   .info-wrapper {
